prova filtraggio per tipo

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
         <div class="container_bottom">
             <label for="selector">Filtra per Tipo</label>
             <select name="selezione" id="selector">
-                <option value="1">uno</option>
-                <option value="2">due</option>
-                <option value="3">tre</option>
+                <option value="all">All</option>
+                <option value="animal">Animal</option>
+                <option value="vegetable">Vegetable</option>
+                <option value="user">User</option>
             </select>
         </div>
     </header>
